Add www to myimpactpledge site

--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -99,7 +99,7 @@
         "birthday, I give a personally significant donation to organizations ",
         "that I feel are making a positive impact in youth education."
 			],
-      "url": "https://myimpactpledge.com/pledgers/golmansax",
+      "url": "https://www.myimpactpledge.com/pledgers/golmansax",
       "github": "golmansax/my-impact-pledge",
       "stack": "Express.js, ES6, React.js, CSS Modules",
       "images": [
