--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -123,7 +123,7 @@
       "description": [
         "A fundraising platform for school clubs"
       ],
-      "stack": "Rails, Express.js, ES6, React.js, CSS Modules"
+      "stack": "Rails, Express.js, ES6, React.js, GraphQL, Relay, CSS Modules"
     }
 	]
 }
