Add STEMfest participation

--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -51,6 +51,18 @@
               {
                 "left": [
                   {
+                    "text": "The Science & Health Education Partnership",
+                    "url": "http://biochemistry2.ucsf.edu/programs/sep/index.html"
+                  },
+                  ", STEMfest Volunteer"
+                ],
+                "right": [
+                  "San Francisco, CA: Mar ’16"
+                ]
+              },
+              {
+                "left": [
+                  {
                     "text": "Eastside High School",
                     "url": "http://www.eastside.org/"
                   },
