Update boost title

--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -30,7 +30,7 @@
       "url": "https://www.boostmyclub.com",
 			"positions": [
 				{
-					"title": "Co-founder",
+					"title": "Founder",
 					"start": "Nov ’15",
 					"end": "Current"
 				}
