--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -116,7 +116,7 @@
 				{
           "title": "Product/Technical Advisor",
 					"start": "Mar ’14",
-					"end": "Current"
+					"end": "Jan ’16"
 				}
 			],
 			"involvedWith": [
