Slightly modify content

--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -39,18 +39,6 @@
               {
                 "left": [
                   {
-                    "text": "First Graduate",
-                    "url": "http://firstgraduate.org/"
-                  },
-                  ", Academic Coach"
-                ],
-                "right": [
-                  "San Francisco, CA: Nov ’14 – Current"
-                ]
-              },
-              {
-                "left": [
-                  {
                     "text": "The Science & Health Education Partnership",
                     "url": "http://biochemistry2.ucsf.edu/programs/sep/index.html"
                   },
@@ -58,6 +46,18 @@
                 ],
                 "right": [
                   "San Francisco, CA: Mar ’16"
+                ]
+              },
+              {
+                "left": [
+                  {
+                    "text": "First Graduate",
+                    "url": "http://firstgraduate.org/"
+                  },
+                  ", Academic Coach"
+                ],
+                "right": [
+                  "San Francisco, CA: Nov ’14 – Oct ’16"
                 ]
               },
               {
