--- a/locales/en/resume.json
+++ b/locales/en/resume.json
@@ -217,7 +217,23 @@
 			"title": [
 				"Side Projects of Note:"
 			],
+			"numInitialNotesToShow": 3,
 			"notes": [
+				[
+					{
+						"url": "http://yoquarry.club",
+						"text": "Quarry"
+					},
+					" – Autocomplete as a service for e-commerce sites. For the demo, we used a Chrome extensions to hack the search on Walmart.com to point to our API (indexed with Walmart's data)."
+				],
+				[
+					{
+						"url": "https://www.myimpactpledge.com/pledgers/golmansax",
+						"text": "My Impact Pledge"
+					},
+					" – A site to document the donations I make every year ",
+          "on my birthday to youth education organizations"
+				],
 				[
 					{
 						"url": "https://github.com/stephenball1/Twinkle",
@@ -231,6 +247,15 @@
 						"text": "Flux CRUD Store"
 					},
 					" – A Flux Store implementation that uses Backbone for CRUD actions, and returns Immutable.js objects to allow for pure rendering"
+				],
+				[
+					{
+            "text": "Human-Centered Design Course",
+            "routeName": "/in-community/human-centered-design"
+					},
+					" – offered by +Acumen and IDEO, our project involved brainstorming ",
+          "methods to promote healthy eating in the Tenderloin ",
+          "neighborhood in San Francisco, CA"
 				],
 				[
 					{
@@ -259,7 +284,7 @@
 			"title": [
 				"Volunteer Experience:"
 			],
-			"numInitialNotesToShow": 2,
+			"numInitialNotesToShow": 3,
 			"notes": [
 				{
 					"left": [
@@ -273,6 +298,30 @@
 						"San Francisco, CA: Mar ’14 – Current"
 					]
 				},
+        {
+          "left": [
+            {
+              "text": "Building Diversity in Science",
+              "url": "http://www.diversityinscience.org/"
+            },
+            ", Advisor"
+          ],
+          "right": [
+            "Daly City, CA: June ’15 – Current"
+          ]
+        },
+        {
+          "left": [
+            {
+              "text": "The Science & Health Education Partnership",
+              "url": "http://biochemistry2.ucsf.edu/programs/sep/index.html"
+            },
+            ", STEMfest Volunteer"
+          ],
+          "right": [
+            "San Francisco, CA: Mar ’16"
+          ]
+        },
 				{
 					"left": [
 						{
@@ -282,7 +331,7 @@
 						", Academic Coach"
 					],
 					"right": [
-						"San Francisco, CA: Nov ’14 – Current"
+						"San Francisco, CA: Nov ’14 – Oct ’16"
 					]
 				},
 				{
@@ -321,29 +370,6 @@
 						"Washington, DC: June ’06 – May ’12"
 					]
 				}
-			]
-		},
-		{
-			"title": [
-				"Links:"
-			],
-			"notes": [
-				[
-					{
-						"url": "http://www.sfgate.com/music/slideshow/Outside-Lands-2014-91325.php",
-						"text": "acroyoga"
-					},
-					", ",
-					{
-            "text": "human-centered design",
-            "routeName": "/in-community/human-centered-design"
-					},
-					", ",
-					{
-						"text": "my impact pledge",
-            "routeName": "/in-community/my-impact-pledge"
-					}
-				]
 			]
 		}
 	]
