--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -156,8 +156,29 @@
               ]
             ]
 					}
-				}
+        }
       ]
-    }
+    },
+    {
+      "slug": "other",
+      "name": "Other links of note",
+      "custom": [
+				{
+					"klass": "FragmentsBulletList",
+					"attrs": {
+            "bullets": [
+              [
+                [
+                  {
+                    "text": "Acroyoga at Outside Lands 2014",
+                    "url": "http://www.sfgate.com/music/slideshow/Outside-Lands-2014-91325.php"
+                  }
+                ]
+              ]
+            ]
+          }
+				}
+			]
+		}
   ]
 }
