--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -19,7 +19,7 @@
 			"joinedWhen": "Team had 3 employees (2 engineers)",
 			"involvedWith": [
 				["Full stack of website development, from code architecting to frontend UI/UX"],
-				["Spearheaded a database redesign that significantly opened up sales opportunities"],
+				["Spearheaded a database redesign that significantly opened up the product to larger sales opportunities"],
 				["Help create an engineering culture that values collaboration and a strong testing suite"]
 			]
 		},
