--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -30,10 +30,10 @@
                     "text": "Building Diversity in Science",
                     "url": "http://www.diversityinscience.org/"
                   },
-                  ", Advisor"
+                  ", Board Advisor"
                 ],
                 "right": [
-                  "Daly City, CA: June ’15 – Current"
+                  "Oakland, CA: June ’15 – Current"
                 ]
               },
               {
