Publicize grid-option

--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -1,6 +1,22 @@
 {
   "projects": [
     {
+      "slug": "grid-option",
+      "name": "GridOption",
+      "url": "http://grid-option.herokuapp.com",
+      "createdFor": "Powerhouse SunCode Solar Hackathon 2016",
+      "description": "An analytics platform built for utility companies to display and visualize current solar adoption rates in a particular region.",
+      "github": "golmansax/grid-option",
+      "stack": "Express.js, Google Maps API, MongoDB",
+      "images": [
+        "/static/grid-option.jpg"
+      ],
+      "involvedWith": [
+        ["Use Google Maps API to plot every house that installed solar in Bakersfield, CA"],
+        ["Integrate Zillow neighborhood data to compute aggregate solar data for a neighborhood"]
+      ]
+    },
+    {
       "slug": "quarry",
       "name": "Quarry",
       "url": "http://yoquarry.club",
