Add scalatra to list

--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -169,6 +169,12 @@
                 [{
                   "github": "golmansax/todo-app-in-django"
                 }]
+              ],
+              [
+                ["Scalatra (Scala), MongoDB"],
+                [{
+                  "github": "golmansax/todo-app-in-scalatra"
+                }]
               ]
             ]
 					}
