--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -16,7 +16,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Personal site of Holman Gao, programmer and product person at various startups, University of Maryland and Blair Magnet alum, living in San Francisco"
+          "content": "Personal site of Holman Gao, founder and programmer at various startups, University of Maryland and Blair Magnet alum, living in San Francisco"
         }
       ],
 			"title": "Holman Gao",
