Update meta description

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -16,7 +16,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Personal site of Holman Gao, founder and programmer at various startups, University of Maryland and Blair Magnet alum, living in San Francisco"
+          "content": "Personal site of Holman Gao, entrepreneur with a love for education, University of Maryland and Blair Magnet alum, living in San Francisco"
         }
       ],
 			"title": "Holman Gao",
@@ -26,7 +26,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Timeline of where I have worked. Currently working as a software engineer at Room 77 and as a product/technical advisor at Amass Media."
+          "content": "Timeline of where I have worked. Currently working on Boost My School, BookBooster, and taking on various contracting projects."
         }
       ],
 			"title": "Work"
