Update meta data

--- a/locales/en/meta_data.json
+++ b/locales/en/meta_data.json
@@ -16,7 +16,7 @@
 			"meta": [
         {
           "name": "description",
-          "content": "Personal site of Holman Gao, entrepreneur with a love for education, University of Maryland and Blair Magnet alum, living in San Francisco"
+          "content": "Personal site of Holman Gao, entrepreneur and freelance programmer with a love for education, University of Maryland and Blair Magnet alum, living in San Francisco"
         }
       ],
 			"title": "Holman Gao",
