--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -5,7 +5,8 @@
       "name": "BookBooster",
       "description": [
         "An initiative for the 2016-17 school year to ",
-        "provide books to 20 Bay Area schools serving low-income students."
+        "provide books to 20 Bay Area schools serving low-income students. ",
+        "As of August 2016, BookBooster has raised 4,104 books (over $12,500)!"
       ],
       "url": "https://bayarea.bookbooster.org",
       "stack": "Typescript, Express.js, Sequelize, React.js, Sass",
