Update location to New York

--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -36,7 +36,7 @@
                   ", Math Tutor"
                 ],
                 "right": [
-                  "San Francisco, CA: Mar ’14 – Current"
+                  "San Francisco, CA: Mar ’14 – May ’16"
                 ]
               },
               {
@@ -48,7 +48,7 @@
                   ", Board Advisor"
                 ],
                 "right": [
-                  "Oakland, CA: June ’15 – Current"
+                  "Oakland, CA: June ’15 – May ’16"
                 ]
               },
               {
