--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -11,6 +11,10 @@
       "images": [
         "/static/grid-option.jpg"
       ],
+      "colleagues": [
+        { "personId": "breyer" },
+        { "personId": "jefferson" }
+      ],
       "involvedWith": [
         ["Use Google Maps API to plot every house that installed solar in Bakersfield, CA"],
         ["Integrate Zillow neighborhood data to compute aggregate solar data for a neighborhood"]
@@ -27,6 +31,10 @@
       "images": [
         "/static/quarry.jpg",
         "/static/quarry_home.jpg"
+      ],
+      "colleagues": [
+        { "personId": "roger" },
+        { "personId": "stephen" }
       ],
       "involvedWith": [
         ["Built out API skeleton"],
@@ -57,6 +65,11 @@
       "description": "A social dating app designed so you can be involved with choosing your friend's dates.",
       "github": "stephenball1/Twinkle",
       "stack": "Android app in Java, Firebase",
+      "colleagues": [
+        { "personId": "judy" },
+        { "personId": "roger" },
+        { "personId": "stephen" }
+      ],
       "images": [
         [
           "/static/circl_match.jpg",
@@ -108,6 +121,7 @@
       "createdFor": "Battlecode 2015",
       "github": "y4n9squared/battlecode",
       "images": ["/static/battlecode-2015.jpg"],
+      "colleagues": [{ "personId": "yang" }],
       "gif": "/static/battlecode-2015.gif",
       "description": [
         "An autonomous program that plays the computer game Battlecode; this ",
