Add people's githubs

--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -7,7 +7,8 @@
       "name": "Hannah Yang"
     },
     "ian": {
-      "name": "Ian Webster"
+      "name": "Ian Webster",
+      "github": "typpo"
     },
     "roger": {
       "name": "Roger Wong"
