Add more githubs

--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -14,31 +14,39 @@
       "name": "Roger Wong"
     },
     "stephen": {
-      "name": "Stephen Ball"
+      "name": "Stephen Ball",
+      "github": "stephenball1"
     },
     "judy": {
-      "name": "Judy Mou"
+      "name": "Judy Mou",
+      "github": "judymou"
     },
     "yang": {
-      "name": "Yang Yang"
+      "name": "Yang Yang",
+      "github": "y4n9squared"
     },
     "jefferson": {
-      "name": "Jefferson Teng"
+      "name": "Jefferson Teng",
+      "github": "jeffersonteng"
     },
     "melanie": {
       "name": "Melanie Gin"
     },
     "julee": {
-      "name": "JuLee Burdekin"
+      "name": "JuLee Burdekin",
+      "github": "theship"
     },
     "qian": {
-      "name": "Qian Wang"
+      "name": "Qian Wang",
+      "github": "qianwang83"
     },
     "rob": {
-      "name": "Robert Fletcher"
+      "name": "Robert Fletcher",
+      "github": "mockdeep"
     },
     "jt": {
-      "name": "JT Bowler"
+      "name": "JT Bowler",
+      "github": "QuotableWater7"
     },
     "breyer": {
       "name": "Andrew Breyer"
