Add another colleague

--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -25,6 +25,9 @@
       "name": "Yang Yang",
       "github": "y4n9squared"
     },
+    "abi": {
+      "name": "Abi Raja"
+    },
     "jefferson": {
       "name": "Jefferson Teng",
       "github": "jeffersonteng"
