--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -9,7 +9,10 @@
         "provide books to 20 Bay Area schools serving low-income students. ",
         "As of August 2016, BookBooster has raised 4,104 books (over $12,500)!"
       ],
-      "colleagues": [{ "personId": "at" }],
+      "colleagues": [
+        { "personId": "at" },
+        { "personId": "abi" }
+      ],
       "url": "https://bayarea.bookbooster.org",
       "stack": "Typescript, Express.js, Sequelize, React.js, Sass",
       "images": [
