--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -53,6 +53,21 @@
     },
     "breyer": {
       "name": "Andrew Breyer"
+    },
+    "kala": {
+      "name": "Kala Viswanathan"
+    },
+    "cheryl": {
+      "name": "Cheryl Zhang"
+    },
+    "jason-xu": {
+      "name": "Jason Xu"
+    },
+    "caroline-orsi": {
+      "name": "Caroline Orsi"
+    },
+    "peter-skipper": {
+      "name": "Peter Skipper"
     }
   }
 }
