--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -1,6 +1,22 @@
 {
   "projects": [
     {
+      "slug": "od-response",
+      "name": "ODResponse",
+      "createdFor": "The 2016 FDA Naloxone App Competition",
+      "description": "Deliver naloxone to people experiencing an overdose, by partnering with driver-based services (e.g. taxis, food delivery) and having their drivers deliver naloxone in emergency situations.",
+      "stack": "React Native, ExponentJS",
+      "images": [
+        ["/static/od-response_1.jpg", "/static/od-response_2.jpg"]
+      ],
+      "colleagues": [
+        { "personId": "roger" }
+      ],
+      "involvedWith": [
+        ["App prototyping and development"]
+      ]
+    },
+    {
       "slug": "grid-option",
       "name": "Grid Option",
       "url": "http://grid-option.herokuapp.com",
