--- a/locales/en/people.json
+++ b/locales/en/people.json
@@ -70,6 +70,10 @@
     },
     "peter-skipper": {
       "name": "Peter Skipper"
+    },
+    "zeki": {
+      "name": "Zeki Mokhtarzada",
+      "github": "zmokhtar"
     }
   }
 }
