--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -8,7 +8,6 @@
 				"/static/chalk.jpg"
 			],
 			"description": "A digital workflow system created for K-12 schools and school districts.",
-			"stack": "Rails, Backbone + React.js, Haml, Bootstrap + Sass, PostgreSQL",
       "technologies": ["rails", "reactjs", "backbonejs", "bootstrap", "ruby", "javascript", "scss", "haml", "heroku", "postgres"],
 			"positions": [
 				{
@@ -40,8 +39,7 @@
       "description": [
         "A fundraising platform for school programs"
       ],
-      "stack": "Rails, Express.js, ES6, React.js, GraphQL, Relay, CSS Modules",
-      "technologies": ["rails", "expressjs", "reactjs", "graphql", "relay", "cssModules", "jsLatest", "heroku", "postgres"],
+      "technologies": ["rails", "expressjs", "reactjs", "graphql", "relay", "css-modules", "ruby", "js-latest", "heroku", "postgres"],
       "press": [
         [
           {
@@ -61,8 +59,16 @@
         "Creating the fastest real-time website thumbnails.  The only thumbnail generator to stream thumbnails as soon as they are requested."
       ],
       "colleagues": [{ "personId": "zeki" }],
-      "stack": "Express.js, Sequelize, React.js, Bootstrap + Sass",
-      "technologies": ["expressjs", "sequelize", "reactjs", "bootstrap", "javascript", "scss", "heroku", "postgres"]
+      "technologies": ["expressjs", "sequelize", "reactjs", "redux", "bootstrap", "javascript", "scss", "heroku", "postgres"],
+      "press": [
+        [
+          "Featured on ",
+          {
+            "url": "https://www.producthunt.com/posts/thum-io",
+            "text": "Product Hunt"
+          }
+        ]
+      ]
     },
 		{
       "slug": "zenysis",
@@ -76,7 +82,6 @@
         "organizations to tackle global health issues"
       ],
       "colleagues": [{ "personId": "ian", "position": "Co-Founder, CTO" }],
-			"stack": "Flask, React.js, Bootstrap + Sass, MongoDB",
       "technologies": ["flask", "reactjs", "bootstrap", "python", "javascript", "scss", "mongo"],
 			"positions": [
 				{
@@ -100,8 +105,7 @@
         ]
 			],
 			"description": "Search across dozens of hotel sites to find the best price.",
-			"stack": "Angular.js, Sass, PHP, C++",
-      "technologies": ["angular1", "javascript", "scss", "php", "python", "cplusplus", "mysql"],
+      "technologies": ["angular1", "javascript", "scss", "php", "cplusplus", "python", "bash", "mysql"],
 			"positions": [
 				{
 					"title": "Software Contractor",
@@ -139,7 +143,6 @@
 			],
       "colleagues": [{ "personId": "hannah", "position": "Co-Founder, CEO" }],
 			"description": "Connecting socially-conscious filmmakers and organizations.",
-			"stack": "Rails, Angular.js, Haml, Foundation + Sass, MongoDB",
       "technologies": ["rails", "angular1", "foundation", "ruby", "javascript", "haml", "scss", "heroku", "mongo"],
 			"positions": [
 				{
