Show projects on technologies page

--- a/locales/en/technologies.json
+++ b/locales/en/technologies.json
@@ -42,6 +42,7 @@
     "mongo": "MongoDB",
     "firebase": "Firebase",
     "mysql": "MySQL",
+    "ec2": "Amazon EC2",
     "heroku": "Heroku"
   }
 }
